longhorn/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: longhorn-system
  labels:
    service: longhorn-system
    type: infrastructure
    gateway: cilium
