longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-ingress
  namespace: longhorn
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: longhorn.yadon3141.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-ui
            port:
              number: 443
